--- a/res/layout/item_hackathon_project.xml
+++ b/res/layout/item_hackathon_project.xml
@@ -7,11 +7,11 @@
 
     <ImageView
             android:id="@+id/iv_hackathon"
-            android:layout_width="250dp"
+            android:layout_width="match_parent"
             android:layout_height="220dp"
             android:scaleType="centerCrop"/>
 
-    <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    <com.mattkula.resume.NotifyingHorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                   android:id="@+id/scrollview"
                   android:fillViewport="true"
                   android:scrollbars="none"
@@ -20,6 +20,7 @@
 
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="wrap_content"
+                  android:layout_gravity="center_vertical"
                   android:orientation="horizontal">
 
         <Space android:layout_width="250dp"
@@ -30,6 +31,7 @@
                       android:layout_height="wrap_content"
                       android:padding="20dp"
                       android:id="@+id/colorizer"
+                      android:alpha="0.9"
                       android:orientation="vertical">
             <TextView
                     android:id="@+id/tv_hackathon_project_title"
@@ -68,7 +70,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
+                android:layout_marginRight="20dp"
+                android:paddingRight="12dp"
                 android:id="@+id/colorizer2"
+                android:alpha="0.9"
                 android:orientation="horizontal">
 
             <ImageButton
@@ -94,5 +99,6 @@
         </LinearLayout>
     </LinearLayout>
 
-    </HorizontalScrollView>
+    </com.mattkula.resume.NotifyingHorizontalScrollView>
+
 </FrameLayout>
